--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TotalZone</title>
-</head>
-<body style="margin:0;background:black;color:gold;">
-  <div id="root">Benvenuto su TotalZone</div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TotalZone</title>
+  </head>
+  <body style="margin: 0; background-color: black; color: gold;">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
