--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-// Contenuto fittizio di index.html
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TotalZone</title>
+</head>
+<body style="margin:0;background:#111;color:#ffd700;font-family:sans-serif;">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+</html>
